# pnm2ppa

./: Changelog  Makefile.am  Makefile.in  aclocal.m4  calibrate_ppa.c  config.h.in  configure  configure.ac  cutswath.c  debug.c  defaults.h  dither.c  gamma.c  global.h  image.c  image.h  lang.h  make_hash_ink.c  pnm2ppa.c  pnm2ppa.h  pnmtools.c  pnmtools.h  ppa.c  ppa.h  ppa_syslog.h  syslog.c  text-cz.h  text-en.h  text-es.h  text-fr.h  text-it.h  text-nl.h
debian/: .git-dpm  .todo  calibrate_ppa.8  changelog  control  copyright  prerm  printer-driver-pnm2ppa.dirs  printer-driver-pnm2ppa.docs  printer-driver-pnm2ppa.examples  printer-driver-pnm2ppa.install  printer-driver-pnm2ppa.manpages  printer-driver-pnm2ppa.postinst  printer-driver-pnm2ppa.postrm  rules  templates  watch
debian/patches/: 0001-Fix-signedness-of-c.patch  0002-Make-sure-examples-have-shebangs.patch  0003-Fix-various-errors-in-the-pnm2ppa-manpage.patch  0004-Drop-usage-of-__DATE__-and-__TIME__-hindering-build.patch  series
debian/po/: cs.po  da.po  de.po  es.po  eu.po  fi.po  fr.po  gl.po  it.po  ja.po  nl.po  pt.po  pt_BR.po  ru.po  sv.po  templates.pot  vi.po
docs/en/: CALIBRATION.txt  COLOR.txt  INSTALL  INSTALL.MANDRAKE.html  INSTALL.MANDRAKE.txt  INSTALL.REDHAT.html  INSTALL.REDHAT.txt  INSTALL.SOLARIS  PPA_networking.txt  RELEASE-NOTES  pnm2ppa.1
docs/en/sgml/: INSTALL.REDHAT.sgml  PPA_networking.sgml
ppa_protocol/: Makefile.am  Makefile.in  scp_820cse.html  sweep_data.html
rpm/redhat/: pnm2ppa-redhat.patch  pnm2ppa.spec
sample_scripts/: lprbw  lprcolor  lpreco
utils/Linux/: detect_ppa
